k8s/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airmozilla
  namespace: airmozilla
spec:
  template:
    spec:
      containers:
      - name: web
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
