k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airmozilla-deployment
  namespace: airmozilla
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.web: glob:k8s-*
spec:
  selector:
    matchLabels:
      app: airmozilla-web
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: airmozilla-web
    spec:
      containers:
      - name: web
        image: itsre/airmozilla:k8s-ee2a5285e00a73ef76758f060bdb9d19cd005a0d
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
            path: /healthz
        readinessProbe:
          httpGet:
            port: 80
            path: /readiness
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 125m
            memory: 256Mi
