k8s/flux-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airmozilla-deployment
  namespace: airmozilla
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: web
      containers:
      - image: itsre/airmozilla:k8s-36478c413dbd8ab89110f528b87fb0138a7a5477
        name: web
