k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airmozilla
  labels:
    app: airmozilla-web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: airmozilla-web
