k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: airmozilla
  namespace: airmozilla
spec:
  rules:
  - host: air.mozilla.org
    http:
      paths:
      - path: /
        backend:
          serviceName: airmozilla
          servicePort: 80
